[gd_scene load_steps=16 format=2]

[ext_resource path="res://scenes/ball.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/game.gd" type="Script" id=2]
[ext_resource path="res://scenes/paddle_R.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/paddle_L.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/ui.tscn" type="PackedScene" id=5]
[ext_resource path="res://art/pong_music.wav" type="AudioStream" id=6]
[ext_resource path="res://scripts/paddle_L.gd" type="Script" id=7]
[ext_resource path="res://art/hit.wav" type="AudioStream" id=8]
[ext_resource path="res://art/opponent_score.wav" type="AudioStream" id=9]
[ext_resource path="res://art/player_score.wav" type="AudioStream" id=10]
[ext_resource path="res://scenes/HitPlayer2D.gd" type="Script" id=11]
[ext_resource path="res://scenes/GameMusicPlayer.gd" type="Script" id=12]
[ext_resource path="res://scenes/OpponentScorePlayer.gd" type="Script" id=13]
[ext_resource path="res://scenes/PlayerScorePlayer.gd" type="Script" id=14]
[ext_resource path="res://art/Paddle.png" type="Texture" id=15]

[node name="game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_right = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ball" parent="." instance=ExtResource( 1 )]

[node name="HitPlayer2D" type="AudioStreamPlayer2D" parent="ball"]
stream = ExtResource( 8 )
script = ExtResource( 11 )

[node name="paddle_L" parent="." instance=ExtResource( 4 )]
script = ExtResource( 7 )

[node name="paddle_R" parent="." instance=ExtResource( 3 )]

[node name="ui" parent="." instance=ExtResource( 5 )]

[node name="GameMusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
script = ExtResource( 12 )

[node name="OpponentScorePlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
script = ExtResource( 13 )

[node name="PlayerScorePlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
script = ExtResource( 14 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]

[node name="Sprite" type="Sprite" parent="KinematicBody2D"]
modulate = Color( 1, 1, 1, 0.52549 )
position = Vector2( 124, 12 )
texture = ExtResource( 15 )

[node name="Sprite2" type="Sprite" parent="KinematicBody2D"]
modulate = Color( 1, 1, 1, 0.52549 )
position = Vector2( 124, 36 )
texture = ExtResource( 15 )
offset = Vector2( 0, 5 )

[node name="Sprite3" type="Sprite" parent="KinematicBody2D"]
modulate = Color( 0.537255, 0.537255, 0.537255, 1 )
position = Vector2( 124, 68 )
texture = ExtResource( 15 )
offset = Vector2( 0, 1 )

[node name="Sprite4" type="Sprite" parent="KinematicBody2D"]
modulate = Color( 0.537255, 0.537255, 0.537255, 1 )
position = Vector2( 124, 97 )
texture = ExtResource( 15 )

[node name="Sprite5" type="Sprite" parent="KinematicBody2D"]
modulate = Color( 0.537255, 0.537255, 0.537255, 1 )
position = Vector2( 124, 126 )
texture = ExtResource( 15 )

[node name="Sprite6" type="Sprite" parent="KinematicBody2D"]
modulate = Color( 0.537255, 0.537255, 0.537255, 1 )
position = Vector2( 124, 155 )
texture = ExtResource( 15 )

[node name="Sprite7" type="Sprite" parent="KinematicBody2D"]
modulate = Color( 0.537255, 0.537255, 0.537255, 1 )
position = Vector2( 124, 184 )
texture = ExtResource( 15 )

[node name="Sprite8" type="Sprite" parent="KinematicBody2D"]
modulate = Color( 0.537255, 0.537255, 0.537255, 1 )
position = Vector2( 124, 213 )
texture = ExtResource( 15 )

[node name="Sprite9" type="Sprite" parent="KinematicBody2D"]
modulate = Color( 0.537255, 0.537255, 0.537255, 1 )
position = Vector2( 124, 242 )
texture = ExtResource( 15 )

[connection signal="respawn_ball" from="ui" to="." method="_on_ui_respawn_ball"]
[connection signal="restart" from="ui" to="." method="_on_ui_restart"]
[connection signal="score" from="ui" to="ball" method="_on_ui_score"]
